* Document `@ConditionBlock` Annotation spockPull:1709[]
* Document `old`-Method spockPull:1708[]
* Clarify documentation for global Mocks spockPull:1755[]
* Spock-Compiler does not use wrapper types anymore spockPull:1765[]
* Reduce lock contention of the `byte-buddy` mock maker, when multiple mocks are created concurrently spockPull:1778[]

== 2.4-M1 (2022-11-30)

* Fix issues with Spring 6/Spring Boot 3 spockPull:1541[]

== 2.3 (2022-09-29)

* Add RepeatUntilFailure extension spockPull:1522[]
* Fix problem with TempDir failing when using a custom class that extends from `File` or `Path` spockPull:1519[]
* Fix issue with `Object` methods on interface spies spockPull:1529[]
* Fix equality checking of Mocks that implement `Comparable` spockPull:1323[]
* Validate uniqueness of fixture methods per specification class spockPull:1521[]

NOTE: The changes to equality checking for `Comparable` mocks can lead to different behavior when no explicit `compareTo` interactions was defined.
For example, Groovy will use `compareTo` to check equality when classes implement `Compareable`.
Until now, the mock would return `0` for default invocations, which would lead to the objects being considered equal.

Thanks to all the contributors to this release: Jackson Popkin

== 2.2 (2022-08-31)

* Support for `@SpringBean` and `@SpringSpy` marked with `@Primary` spockPull:1503[]
* Fix issue that `displayName` values for the `Specification`, which were changed by extensions such as <<extensions.adoc#title-and-narrative-extension,@Title>>, not being picked up. spockPull:1509[]
* Update to JUnit 5.9.0

Thanks to all the contributors to this release: Alexander Kriegisch, Marcin Zajączkowski, Jonny Carter, alopukhov, Jerome Prinet, Matthew Moss, BJ Hargrave, konradczajka

== 2.2-M3 (2022-07-15)

* Add support for `IterationSelector` to run individual iterations
* Update to JUnit 5.9.0-RC1

Thanks to all the contributors to this release: Marc Philipp

== 2.2-M2 (2022-07-15)
