@@ -497,9 +497,13 @@ NOTE: This will acquire a `READ_WRITE` lock for `Resources.SYSTEM_PROPERTIES`, s
 
 === AutoAttach
 
-Automatically attaches a detached mock to the current `Specification`. Use this if there is no direct framework
-support available. Spring and Guice dependency injection is automatically handled by the
-<<module_spring.adoc#_spring_module,Spring Module>> and <<modules.adoc#_guice_module,Guice Module>> respectively.
+Automatically attaches a detached mock to the current specification.
+`@AutoAttach` can only be used regular instance fields, not on shared or static ones.
+Use this, if there is no direct framework support available.
+To create detached mocks, see <<interaction_based_testing.adoc#DetachedMockFactory,Create Mocks Outside Specifications>>
+
+Spring and Guice dependency injection is automatically handled by the
+<<module_spring.adoc#_spring_module,Spring Module>> and <<modules.adoc#_guice_module,Guice Module>>, respectively.
 
 === AutoCleanup
 
